# NCG

./: .gitignore  CONTRIBUTING.md  README.md  compute_pvalues.py  evaluate.py  main.py  model.py  plot.py  plot_meta_params.py  pyproject.toml  pytest.ini  requirements.txt  train.py
.github/workflows/: ci.yml  integration.yml
examples/: custom_model_quickstart.py  split_cifar10_quickstart.py  split_mnist_quickstart.py
ncg/: __init__.py  adapters.py  cli.py  evaluate.py  meta.py  metrics.py  model.py  novelty.py  plot.py  train.py
ncg/math/: __init__.py  convergence.py
results/: aggregated_results.csv  convergence_analysis.json  permuted_mnist_results.json  results_table.csv
results_cifar10/: aggregated_results.csv  results_table.csv
scripts/: compute_pvalues.py  main.py  plot.py  plot_meta_params.py  run_permuted_mnist.py
tests/: __init__.py  test_adapters.py  test_convergence.py  test_model.py  test_train.py  test_universal.py
