[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncg"
version = "0.1.0"
description = "NCG (Novelty-triggered Capacity Growth) — Continual learning research prototype with growable architecture and meta-parameters"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = []
keywords = ["continual-learning", "meta-learning", "capacity-growth", "novelty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = [".venv*", "results", "data", "checkpoints"]
